[package]
name = "ironback"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
sqlx = { version = "0.7.4", features = ["tls-native-tls", "postgres", "runtime-tokio"] }
thiserror = "1.0.61"
tokio = "1.26.0"
